Functionize and get Writer's postCount info
1. Functionize to return Json format
2. get Writer's post Count (e.g. normal post count, best post count, BOB post count)

--- a/OUCrawling.ipynb
+++ b/OUCrawling.ipynb
@@ -13,111 +13,110 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### 미디어다음에서 제공하는 영어사전 웹사이트에서 랜돔으로 100개의 단어를 수집하고, 단어와 단어의 의미를 보기 좋게 출력하시오.\n",
-    "\n",
-    "예: http://dic.daum.net/word/view.do?wordid=ekw000078303&q=help\n",
-    "\n",
-    "\n",
-    "* 저장 형식은 자유. 단, 가능한 한 보기 좋게 내용을 편집하여 저장하자.\n",
-    "\n",
-    "  예)\n",
-    "  \n",
-    "    단어 1 \n",
-    "      1. 뜻풀이  \n",
-    "      2. 뜻풀이 \n",
-    "    ===  \n",
-    "    단어 2 \n",
-    "      1. 뜻풀이"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'ResultSet' object has no attribute 'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-130-95aefa1bb7f3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0myoutubeCount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myoutubes\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# 유투브(iframe) 개수\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m     \u001b[0mtextData\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtexts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \"\"\"\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'ResultSet' object has no attribute 'text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import urllib.request\n",
     "import random\n",
     "import re\n",
+    "import json\n",
     "\n",
-    "cnt = 0;\n",
-    "while (cnt < 1) :\n",
+    "rand_url = \"http://www.todayhumor.co.kr/board/view.php?table=bestofbest&no=287215&s_no=287215&page=1\"\n",
+    "#rand_url = \"http://www.todayhumor.co.kr/board/view.php?table=bestofbest&no=287929&s_no=287929&page=1\"\n",
+    "rand_url = \"http://www.todayhumor.co.kr/board/view.php?table=bestofbest&no=287974&s_no=287974&page=1\"\n",
     "    \n",
-    "    ## make random word URL and soup\n",
-    "    rand_url = \"http://www.todayhumor.co.kr/board/view.php?table=bestofbest&no=287215&s_no=287215&page=1\"\n",
-    "    #rand_url = \"http://www.todayhumor.co.kr/board/view.php?table=bestofbest&no=287929&s_no=287929&page=1\"\n",
-    "    rand_url = \"http://www.todayhumor.co.kr/board/view.php?table=bestofbest&no=287974&s_no=287974&page=1\"\n",
+    "def getInfos(url):\n",
+    "    \n",
     "    hdr = {'User-Agent':'Mozilla/5.0'}\n",
-    "    req = urllib.request.Request(rand_url,headers=hdr)\n",
-    "    \n",
+    "    req = urllib.request.Request(url,headers=hdr)\n",
+    "\n",
     "    doc = \"\"\n",
     "    with urllib.request.urlopen(req) as url:\n",
     "        doc = url.read()\n",
-    "    \n",
+    "\n",
     "    soup = BeautifulSoup(doc, \"html.parser\")\n",
     "\n",
     "    ## get Writer Infomation\n",
     "    writerInfoContents = soup.find_all(\"div\", class_=\"writerInfoContents\")\n",
-    "    \n",
-    "    div_list = []\n",
-    "    for tag in writerInfoContents:\n",
-    "        divTags = tag.find_all(\"div\")\n",
-    "        for tag in divTags:\n",
-    "            div_list.append(tag.text)\n",
-    "    \n",
+    "    divTags = writerInfoContents[0].find_all(\"div\")\n",
+    "\n",
     "    contentID = divTags[0].text.split(' : ')[1]\n",
     "    writerName = (divTags[1].find_all(\"b\"))[0].text   # 글쓴이 닉네임\n",
     "    writerInfo_ = (divTags[1].find_all(\"span\"))[-1].text\n",
-    "    writerSignInDate = re.split(':| |\\)',writerInfo)[1]   # 글쓴이 가입 날짜\n",
-    "    writerVisitingCount = re.split(':| |\\)',writerInfo)[3]  # 방문 횟수\n",
+    "    writerSignInDate = re.split(':| |\\)',writerInfo_)[1]   # 글쓴이 가입 날짜\n",
+    "    writerVisitingCount = re.split(':| |\\)',writerInfo_)[3]  # 방문 횟수\n",
     "    recommendCount = divTags[2].find_all(\"span\")[0].text   # 추천수\n",
     "    viewCount = divTags[3].text.split(' : ')[1]            # 조회수 \n",
     "    commentCount = re.split(' : |개',divTags[5].text)[1]   # 댓글 수 \n",
     "    BOBTime = divTags[6].text.split(' : ')[1]              # 베스트 등록 시간\n",
     "    postTIme = divTags[7].text.split(' : ')[1]             # 게시 시간\n",
-    "    \n",
-    "    \n",
+    "\n",
+    "    #### 게시자의 다른 글 개수 ####\n",
+    "    baseURL = \"http://www.todayhumor.co.kr/board/\"\n",
+    "    writerProfileURLSuffix = divTags[1].find_all(\"a\")[0][\"href\"]\n",
+    "    writerProfileURL = baseURL + writerProfileURLSuffix\n",
+    "    writerProfileReq = urllib.request.Request(writerProfileURL,headers=hdr)\n",
+    "\n",
+    "    writerProfileDoc = \"\"\n",
+    "    with urllib.request.urlopen(writerProfileReq) as url:\n",
+    "        writerProfileDoc = url.read()\n",
+    "\n",
+    "    writerProfileSoup = BeautifulSoup(writerProfileDoc, \"html.parser\")    \n",
+    "    table_list = writerProfileSoup.find_all(\"table\", class_=\"table_list\")\n",
+    "    normalPostCount = table_list[0].find(\"a\").text         # 유저가 쓴 글 개수\n",
+    "\n",
+    "    baseURL = \"http://www.todayhumor.co.kr\"\n",
+    "    member_menu_box = writerProfileSoup.find_all(\"div\", class_=\"member_menu_box\")\n",
+    "    writerProfileURLs = member_menu_box[0].find_all(\"a\")\n",
+    "    writerProfileBestURL = baseURL + writerProfileURLs[1][\"href\"]\n",
+    "    writerProfileBOBURL = baseURL + writerProfileURLs[2][\"href\"]\n",
+    "\n",
+    "    writerProfileReq = urllib.request.Request(writerProfileBestURL,headers=hdr)\n",
+    "    writerProfileDoc = \"\"\n",
+    "    with urllib.request.urlopen(writerProfileReq) as url:\n",
+    "        writerProfileDoc = url.read()\n",
+    "\n",
+    "    writerProfileSoup = BeautifulSoup(writerProfileDoc, \"html.parser\")    \n",
+    "    table_list = writerProfileSoup.find_all(\"table\", class_=\"table_list\")\n",
+    "    bestPostCount = table_list[0].find(\"a\").text            # 유저가 쓴 베스트 개수\n",
+    "\n",
+    "    writerProfileReq = urllib.request.Request(writerProfileBOBURL,headers=hdr)\n",
+    "    writerProfileDoc = \"\"\n",
+    "    with urllib.request.urlopen(writerProfileReq) as url:\n",
+    "        writerProfileDoc = url.read()\n",
+    "\n",
+    "    writerProfileSoup = BeautifulSoup(writerProfileDoc, \"html.parser\")    \n",
+    "    table_list = writerProfileSoup.find_all(\"table\", class_=\"table_list\")\n",
+    "    BOBPostCount = table_list[0].find(\"a\").text             # 유저가 쓴 베오베 개수\n",
+    "\n",
+    "    ################################\n",
+    "\n",
     "    ## get Bulletin board Info\n",
     "    viewSubjectDiv = soup.find_all(\"div\", class_=\"viewSubjectDiv\")\n",
-    "    \n",
+    "\n",
     "    board_icon = viewSubjectDiv[0].find_all(\"span\")[0][\"class\"][1]    # 게시판 이름 \n",
-    "    title = viewSubjectDiv[0].find_all(\"div\")[0].text.strip()\n",
-    "    \n",
+    "    title = viewSubjectDiv[0].find_all(\"div\")[0].text.strip()         # 제목\n",
+    "\n",
     "    ## post option : 창작글, 펌글, 베스트 금지, 베오베 금지, 본인삭제금지, 외부펌 금지\n",
     "    contentContainer = soup.find_all(\"div\", class_=\"contentContainer\")\n",
     "    postOption = contentContainer[0].find_all(\"table\")\n",
-    "    \n",
+    "\n",
     "    changjakOption = False # 창작글\n",
     "    permOption = False # 펌글\n",
     "    prohibitBestOption = False # 베스트 금지\n",
     "    prohibitBOBOption = False # 베오베 금지\n",
     "    prohibitBoninOption = False # 본인삭제 금지\n",
     "    prohibitOutsidePermOption = False # 외부펌 금지\n",
-    "        \n",
-    "    \n",
+    "\n",
+    "\n",
     "    if len(postOption) is 2 :  # 첫 <table>은 글 옵션 두번째 <table>은 출처. 즉 테이블이 1개이면 출처만 있고 옵션이 없음\n",
-    "    \n",
+    "\n",
     "        options = postOption[0].find_all(\"li\")\n",
     "\n",
     "        for option in options : \n",
@@ -134,32 +133,40 @@
     "                prohibitBoninOption = True\n",
     "            elif optionName == \"외부펌금지\" :\n",
     "                prohibitOutsidePermOption = True    \n",
-    "    \n",
+    "\n",
     "    ## 본문 내용 가져오기\n",
     "    # 구해야 할것 :  이미지 개수, 동영상 유무(youtube or 움짤), 텍스트 길이, 키워드\n",
-    "    \n",
+    "\n",
     "    viewContent = soup.find_all(\"div\", class_=\"viewContent\")\n",
     "    imgs = viewContent[0].find_all(\"img\") # 본문 삽입된 이미지들\n",
     "    videos = viewContent[0].find_all(\"video\")\n",
     "    youtubes = viewContent[0].find_all(\"iframe\")\n",
     "    texts = viewContent[0].find_all(\"div\")\n",
-    "    \n",
+    "\n",
     "    textData = []\n",
     "    for text in texts :\n",
     "        if (text.text) :\n",
     "            textData.append(text.text)\n",
-    "            \n",
+    "\n",
     "    imgCount = len(imgs)   # 이미지 카운트\n",
     "    videoCount = len(videos)   # 움짤 카운트\n",
     "    youtubeCount = len(youtubes)   # 유투브(iframe) 개수\n",
     "    textLineCount = len(textData)   # 텍스트 줄 수\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    print(\"\\n==============================================================\")\n",
-    "   \n",
-    "    cnt+=1\n",
-    "\n"
+    "\n",
+    "\n",
+    "    ## 추천 시간대 \n",
+    "    recommendList = re.split('  | \\xa0',soup.find_all(\"div\", id=\"ok_layer\")[0].text)\n",
+    "    recommendDate = []           # 추천 시간대\n",
+    "    i=1\n",
+    "    while i<len(recommendList) : \n",
+    "        recommendDate.append(recommendList[i])\n",
+    "        i = i + 4\n",
+    "\n",
+    "    ## JSON 형태로 변환\n",
+    "    returnJson = {recommendDate[x] : 1 for x in range(len(recommendDate))}\n",
+    "    return json.dumps(returnJson,sort_keys=True,indent=4, separators=(',', ': '))\n",
+    "\n",
+    "recommendDate = getInfos(rand_url)"
    ]
   }
  ],
