--- a/OUCrawling.ipynb
+++ b/OUCrawling.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -168,6 +168,37 @@
     "\n",
     "recommendDate = getInfos(rand_url)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\\n    \"2016/12/07 18:20:20\": 1,\\n    \"2016/12/07 18:23:53\": 1,\\n    \"2016/12/07 18:27:33\": 1,\\n    \"2016/12/07 18:30:41\": 1,\\n    \"2016/12/07 19:07:37\": 1,\\n    \"2016/12/07 19:12:29\": 1,\\n    \"2016/12/07 19:43:56\": 1,\\n    \"2016/12/07 19:49:42\": 1,\\n    \"2016/12/07 20:25:11\": 1,\\n    \"2016/12/07 21:06:55\": 1\\n}'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommendDate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -186,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
